<resources>
    <string name="app_name">FGTS Corrigido</string>
    <string name="hello_world">Se sou visto logo existo!</string>
    <string name="title_section1">Cálculo</string>
    <string name="title_section2">Tabela INPC</string>
    <string name="title_section3">Tabela TR</string>
    <string name="title_section4">Como usar</string>
    <string name="title_section5">Informações</string>
    <string name="title_section6">Contato</string>
    <string name="title_section7">Facebook</string>
    <string name="title_section8">Mais Apps</string>
    <string name="action_help">Ajuda</string>
    <string name="action_about">Sobre</string>
    <string name="action_rate">Avalie-me</string>
    <string name="hello">Hello app!</string>
    <string name="title_activity_fgts">F G T S</string>
    <string name="title_activity_month_list">Selecione o mês</string>
    <string name="title_activity_year_list">Selecione o ano</string>
    <string name="title_activity_rssfeed">RssfeedActivity</string>
    <string name="title_activity_detail">Detalhe da Atividade</string>
    <string name="title_activity_expandable_list">Lista Expandível</string>
    <string name="title_expandable_list_main">Expandível Main</string>
    <string name="more_apps_info">Conheça nossos demais aplicativos no GooglePlay.</string>
    <string name="title_xml_demo">XML DEMO</string>
    <string name="gogojohnny_name">Go!Go!Johnny</string>
    <string name="flightdrone_name">FlightDrone</string>
    <string name="lista_de_compras_name">ListaDeCompras</string>
    <string name="embaixadinhas_name">Embaixadinhas</string>
    <string name="btn_calcule">Calcular</string>
    <string name="btn_calcule_total">Calcular Tudo</string>
    <string name="btn_calcule_tr">Calcular TR</string>
    <string name="btn_calcule_inpc">Calcular INPC</string>
    <string name="btn_clear">Limpar</string>
    <string name="btn_cancel">CANCELAR</string>
    <string name="btn_return">Retornar</string>
    <string name="btn_add_period">Iniciar</string>
    <string name="btn_tabela_tr">Tabela TR</string>
    <string name="btn_tabela_inpc">Tabela INPC</string>
    <string name="btn_yes">\  \  \ Sim\  \  \ </string>
    <string name="btn_no">\  \  \ Não\  \  \ </string>
    <string name="zero">0</string>
    <string name="pis_coment">DIGITE ABAIXO OS VALORES DEPOSITADOS MENSALMENTE DE ACORDO COM SEU EXTRATO DO PIS</string>
    <string name="choose_month">Escolha o mês</string>
    <string name="choose_years">Escolha o ano</string>
    <string name="janeiro">Janeiro</string>
    <string name="fevereiro">Fevereiro</string>
    <string name="marco">Março</string>
    <string name="abril">Abril</string>
    <string name="maio">Maio</string>
    <string name="junho">Junho</string>
    <string name="julho">Julho</string>
    <string name="agosto">Agosto</string>
    <string name="setembro">Setembro</string>
    <string name="outubro">Outubro</string>
    <string name="novembro">Novembro</string>
    <string name="dezembro">Dezembro</string>
    <string name="ano1999">1999</string>
    <string name="ano2000">2000</string>
    <string name="ano2001">2001</string>
    <string name="ano2002">2002</string>
    <string name="ano2003">2003</string>
    <string name="ano2004">2004</string>
    <string name="ano2005">2005</string>
    <string name="ano2006">2006</string>
    <string name="ano2007">2007</string>
    <string name="ano2008">2008</string>
    <string name="ano2009">2009</string>
    <string name="ano2010">2010</string>
    <string name="ano2011">2011</string>
    <string name="ano2012">2012</string>
    <string name="ano2013">2013</string>
    <string name="ano2014">2014</string>
    <string name="choose_period">Escolha um período</string>
    <string name="btn_confirm">\  \  \  \  \ Ok\  \  \  \  \ </string>
    <string name="year">Ano</string>
    <string name="indice_inpc">Í N D I C E \  \  \  \  \  \  I N P C</string>
    <string name="indice_tr">Í N D I C E \  \  \  \  \  \  T R</string>
    <string name="preencha_pis">Preencha os campos conforme seu extrato do pis</string>
    <string name="digite_valor">Digite o valor desejado: </string>
    <string name="action_saved">Cálculos salvos</string>
    <string name="name_title">\  \  NOME: </string>
    <string name="btn_delete">APAGAR</string>
    <string name="btn_load">Carregar</string>
    <string name="exit_text">Sair</string>
    <string name="using_tips">Como usar</string>
    <string name="loading">Carregando...</string>
    <string name="salvos_text">Carregar</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_example">Example action</string>
    <string name="action_settings">Settings</string>
    <string name="splash_message">Carregando. Por favor aguarde...</string>
    <string name="about_message">\nAplicativo desenvolvido apenas para SIMULAÇÃO DA CORREÇÃO DO FGTS pelos índices TR e INPC desde o ano de 1999 com a finalidade de informar ao trabalhador brasileiro sobre as diferenças aplicadas desses índices na atualização do FGTS.\nEnquanto aguardamos a decisão referente Ação Direta de Inconstitucionalidade (ADI 5090) no Supremo Tribunal Federal (STF) contra dispositivos das Leis 8.036/1990 (artigo 13) e 8.177/1991 (artigo 17) que impõem a correção dos depósitos nas contas vinculadas do FGTS pela TR você pode entrar com um processo contra a Caixa Econômica Federal pedindo a revisão e correção do seu FGTS aplicando o INPC sobre o saldo no período, isso é um direito de todo cidadão brasileiro, afinal o Brasil é um país democrático que permite cada um de nós cobrar os direitos conquistados ao longo de nossa história.\n\nESTEJA CIENTE QUE OS VALORES DOS RESULTADOS MOSTRADOS NESSSE APLICATIVO SÃO VALORES APROXIMADOS E POR ISSO PODEM NÃO ESTAR EXATAMENTE IGUAIS AO EXTRATO DO FGTS.\n\nÉ IMPRESCINDÍVEL CONSULTAR UM ADVOGADO OU O SINDICATO PARA MAIS DETALHES.\n\nEsse aplicativo não tem nenhum vínculo com partido político ou órgão governamental ou não governamental, assim a finalidade é meramente informativa assegurada pela Constituição Federal Brasileira artigo 5º inciso IX onde se diz que é livre a expressão da atividade intelectual, artística, científica e de comunicação, independentemente de censura ou licença.\n\n\nVersão do aplicativo 3.3.0\n\nCriado por Now It Goes Apps\n\n\nAgradecemos por adquirir o aplicativo.\n\n</string>
    <string name="cmsg_busy">Por favor aguarde…</string>
    <string-array name="months">
        <item>Janeiro</item>
        <item>Fevereiro</item>
        <item>Março</item>
        <item>Abril</item>
        <item>Maio</item>
        <item>Junho</item>
        <item>Julho</item>
        <item>Agosto</item>
        <item>Setembro</item>
        <item>Outubro</item>
        <item>Novembro</item>
        <item>Dezembro</item>
    </string-array>
    <string-array name="years">
        <item>1999</item>
        <item>2000</item>
        <item>2001</item>
        <item>2002</item>
        <item>2003</item>
        <item>2004</item>
        <item>2005</item>
        <item>2006</item>
        <item>2007</item>
        <item>2008</item>
        <item>2009</item>
        <item>2010</item>
        <item>2011</item>
        <item>2012</item>
        <item>2013</item>
        <item>2014</item>
        <item>2015</item>
    </string-array>
    <string name="choose_period_prompt">Informe o período</string>
    <string name="initial_month_prompt">Mês inicial</string>
    <string name="final_month_prompt">Mês final</string>
    <string name="initial_year_prompt">Ano inicial</string>
    <string name="final_year_prompt">Ano Final</string>
    <string name="dialog_periodo_dica">Exemplo:\nSe você trabalhou com carteira assinada de Abril de 2004 até
    Janeiro de 2009 então escolha na primeira linha o mês de Abril e o ano 2004, na segunda linha escolha o mês de
        Janeiro e o ano 2009.</string>
    <string name="confirmar">CONFIRMAR</string>
    <string name="preencha_os_campos_abaixo">Preencha os campos abaixo conforme seu extrato do FGTS</string>
    <string name="btn_num_7">7</string>
    <string name="btn_div">/</string>
    <string name="btn_num_8">8</string>
    <string name="btn_num_9">9</string>
    <string name="btn_num_4">4</string>
    <string name="btn_num_5">5</string>
    <string name="btn_num_6">6</string>
    <string name="btn_mul">*</string>
    <string name="btn_num_1">1</string>
    <string name="btn_num_2">2</string>
    <string name="btn_num_3">3</string>
    <string name="btn_min">-</string>
    <string name="btn_dot">.</string>
    <string name="btn_num_0">0</string>
    <string name="btn_igual">=</string>
    <string name="btn_plus">+</string>
    <string name="btn_clean"><![CDATA[<--]]></string>
    <string name="btn_back">VOLTAR</string>
    <string name="btn_ok">OK</string>
    <string name="change_value">Digite o valor</string>
    <string name="digite_um_nome">Digite um nome</string>
    <string name="set_name">SALVAR</string>
    <string name="load_data">CARREGAR CÁLCULO</string>
    <string name="todo">TODO</string>
    <string name="about_title">SOBRE</string>
    <string name="admob_banner_id">ca-app-pub-4768510961285493/2421209564</string>
    <string name="interstitial_ad_id">ca-app-pub-4768510961285493/7262227962</string>
    <string name="calcular">Calcular</string>
    <string name="tabela_inpc">Tabela INPC</string>
    <string name="tabela_tr">Tabela TR</string>
    <string name="mais_apps">Mais Apps</string>
    <string name="mais">Mais</string>
    <string name="news">NOTÍCIAS</string>
    <string name="avalie_me">Avalie-me</string>
    <string name="carregar">Carregar</string>
    <string name="salvar">Salvar</string>
    <string name="simular_fgts_corrigido">SIMULAR FGTS CORRIGIDO</string>
    <string name="about">Sobre</string>
    <string name="conecte_se">Você precisa estar conectado\n para ver as notícias!</string>
    <string name="share">Compartilhar</string>
</resources>