<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_fgts_periodos"
            android:icon="@drawable/ic_one"
            android:title="@string/calcular" />
        <item
            android:id="@+id/nav_inpc_table"
            android:icon="@drawable/ic_two"
            android:title="@string/tabela_inpc" />
        <item
            android:id="@+id/nav_tr_table"
            android:icon="@drawable/ic_three"
            android:title="@string/tabela_tr" />
        <item
            android:id="@+id/nav_more_apps"
            android:icon="@drawable/ic_more"
            android:title="@string/mais_apps" />
        <item
            android:id="@+id/nav_about"
            android:icon="@drawable/ic_more"
            android:title="@string/about" />
    </group>

    <item android:title="@string/mais">
        <menu>
            <item
                android:id="@+id/nav_site"
                android:icon="@drawable/ic_www"
                android:title="@string/news" />
            <item
                android:id="@+id/nav_share"
                android:icon="@drawable/ic_menu_share"
                android:title="@string/share" />
            <item
                android:id="@+id/nav_rate"
                android:icon="@drawable/ic_rate"
                android:title="@string/avalie_me" />
        </menu>
    </item>

</menu>
