<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:id="@+id/dialogLayout">

    <TableRow
        android:id="@+id/tableRow1"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">
        <Button
            android:id="@+id/btnJaneiro"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_gravity="center"
            android:layout_margin="1dp"
            android:text="@string/janeiro"
            android:textColor="@android:color/white"
            android:textSize="16sp"
            android:background="@drawable/btn_bg"
            android:layout_marginTop="1dp"
            android:layout_marginLeft="1dp"
            android:layout_marginRight="1dp"
            android:layout_marginBottom="1dp"/>
        <Button
            android:id="@+id/btnFevereiro"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_gravity="center"
            android:layout_margin="1dp"
            android:text="@string/fevereiro"
            android:textColor="@android:color/white"
            android:textSize="16sp"
            android:background="@drawable/btn_bg"
            android:layout_marginTop="1dp"
            android:layout_marginLeft="1dp"
            android:layout_marginRight="1dp"/>
        <Button
            android:id="@+id/btnMarco"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_gravity="center"
            android:layout_margin="1dp"
            android:text="@string/marco"
            android:textColor="@android:color/white"
            android:textSize="16sp"
            android:background="@drawable/btn_bg"
            android:layout_marginTop="1dp"
            android:layout_marginLeft="1dp"
            android:layout_marginRight="1dp"/>
    </TableRow>
    <TableRow
        android:id="@+id/tableRow2"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tableRow1">
        <Button
            android:id="@+id/btnAbril"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_gravity="center"
            android:layout_margin="1dp"
            android:text="@string/abril"
            android:textColor="@android:color/white"
            android:textSize="16sp"
            android:background="@drawable/btn_bg"
            android:layout_marginTop="1dp"
            android:layout_marginLeft="1dp"
            android:layout_marginRight="1dp"/>
        <Button
            android:id="@+id/btnMaio"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_gravity="center"
            android:layout_margin="1dp"
            android:text="@string/maio"
            android:textColor="@android:color/white"
            android:textSize="16sp"
            android:background="@drawable/btn_bg"
            android:layout_marginTop="1dp"
            android:layout_marginLeft="1dp"
            android:layout_marginRight="1dp"/>
        <Button
            android:id="@+id/btnJunho"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_gravity="center"
            android:layout_margin="1dp"
            android:text="@string/junho"
            android:textColor="@android:color/white"
            android:textSize="16sp"
            android:background="@drawable/btn_bg"
            android:layout_marginTop="1dp"
            android:layout_marginLeft="1dp"
            android:layout_marginRight="1dp"/>
    </TableRow>
    <TableRow
        android:id="@+id/tableRow3"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tableRow2">
        <Button
            android:id="@+id/btnJulho"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_gravity="center"
            android:layout_margin="1dp"
            android:text="@string/julho"
            android:textColor="@android:color/white"
            android:textSize="16sp"
            android:background="@drawable/btn_bg"
            android:layout_marginTop="1dp"
            android:layout_marginLeft="1dp"
            android:layout_marginRight="1dp"/>
        <Button
            android:id="@+id/btnAgosto"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_gravity="center"
            android:layout_margin="1dp"
            android:text="@string/agosto"
            android:textColor="@android:color/white"
            android:textSize="16sp"
            android:background="@drawable/btn_bg"
            android:layout_marginTop="1dp"
            android:layout_marginLeft="1dp"
            android:layout_marginRight="1dp"/>
        <Button
            android:id="@+id/btnSetembro"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_gravity="center"
            android:layout_margin="1dp"
            android:text="@string/setembro"
            android:textColor="@android:color/white"
            android:textSize="16sp"
            android:background="@drawable/btn_bg"
            android:layout_marginTop="1dp"
            android:layout_marginLeft="1dp"
            android:layout_marginRight="1dp"/>
    </TableRow>
    <TableRow
        android:id="@+id/tableRow4"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tableRow3">
        <Button
            android:id="@+id/btnOutubro"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_gravity="center"
            android:layout_margin="1dp"
            android:text="@string/outubro"
            android:textColor="@android:color/white"
            android:textSize="16sp"
            android:background="@drawable/btn_bg"
            android:layout_marginTop="1dp"
            android:layout_marginLeft="1dp"
            android:layout_marginRight="1dp"/>
        <Button
            android:id="@+id/btnNovembro"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_gravity="center"
            android:layout_margin="1dp"
            android:text="@string/novembro"
            android:textColor="@android:color/white"
            android:textSize="15sp"
            android:background="@drawable/btn_bg"
            android:layout_marginTop="1dp"
            android:layout_marginLeft="1dp"
            android:layout_marginRight="1dp"/>
        <Button
            android:id="@+id/btnDezembro"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_gravity="center"
            android:layout_margin="1dp"
            android:text="@string/dezembro"
            android:textColor="@android:color/white"
            android:textSize="16sp"
            android:background="@drawable/btn_bg"
            android:layout_marginTop="1dp"
            android:layout_marginLeft="1dp"
            android:layout_marginRight="1dp"/>
    </TableRow>

</RelativeLayout>