<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/white">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/dialogTitle"
        android:gravity="center"
        android:textSize="20sp"
        android:textStyle="bold"
        android:textColor="@color/rgb_27"
        android:padding="@dimen/nav_header_vertical_spacing"
        android:text="@string/choose_period_prompt"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="16sp"
        android:textColor="@color/black"
        android:padding="@dimen/nav_header_vertical_spacing"
        android:text="De:"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:id="@+id/ll1"
        android:paddingLeft="@dimen/nav_header_vertical_spacing"
        android:paddingStart="@dimen/nav_header_vertical_spacing"
        tools:ignore="RtlSymmetry">
        <Spinner
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/monthsInitials"
            android:prompt="@string/initial_month_prompt"
            android:background="@color/white"
            android:layout_weight="1"
            android:spinnerMode="dropdown"
            tools:targetApi="honeycomb">
        </Spinner>
        <Spinner
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/yearsInitials"
            android:prompt="@string/initial_year_prompt"
            android:background="@color/white"
            android:layout_weight="1"
            android:spinnerMode="dropdown"
            tools:targetApi="honeycomb">
        </Spinner>
    </LinearLayout>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="16sp"
        android:textColor="@color/black"
        android:padding="@dimen/nav_header_vertical_spacing"
        android:text="Até:"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:id="@+id/ll2"
        android:paddingLeft="@dimen/nav_header_vertical_spacing"
        android:paddingStart="@dimen/nav_header_vertical_spacing"
        tools:ignore="RtlSymmetry">
        <Spinner
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/monthsFinals"
            android:prompt="@string/final_month_prompt"
            android:background="@color/white"
            android:layout_weight="1"
            android:spinnerMode="dropdown"
            tools:targetApi="honeycomb">
        </Spinner>
        <Spinner
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/yearsFinals"
            android:prompt="@string/final_year_prompt"
            android:background="@color/white"
            android:layout_weight="1"
            android:spinnerMode="dropdown"
            tools:targetApi="honeycomb">
    </Spinner>
    </LinearLayout>
    <TextView
        android:textColor="@color/rgb_27"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/dialog_periodo_dica"
        android:padding="@dimen/nav_header_vertical_spacing"/>
    <TableRow
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="end">
        <Button
            android:id="@+id/btnCancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btn_cancel"
            android:textStyle="bold"
            android:textSize="18sp"
            android:background="@drawable/btn_calc"
            android:textColor="@color/report_balance_indent0_bgs"
            android:layout_marginTop="1dp"
            android:layout_marginLeft="1dp"
            android:layout_marginRight="1dp"
            android:layout_marginBottom="1dp"
            android:padding="@dimen/nav_header_vertical_spacing"/>
        <Button
            android:id="@+id/btnConfirm"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/confirmar"
            android:textStyle="bold"
            android:textSize="18sp"
            android:background="@drawable/btn_calc"
            android:textColor="@color/green_custom"
            android:layout_marginTop="1dp"
            android:layout_marginLeft="1dp"
            android:layout_marginRight="1dp"
            android:layout_marginBottom="1dp"
            android:padding="@dimen/nav_header_vertical_spacing"/>
    </TableRow>

</LinearLayout>