<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:background="@color/white">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textSize="20sp"
        android:textStyle="bold"
        android:textColor="@color/rgb_27"
        android:padding="@dimen/nav_header_vertical_spacing"
        android:text="@string/set_name"/>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="start"
        android:textSize="20sp"
        android:textColor="@color/black"
        android:padding="@dimen/nav_header_vertical_spacing"
        android:inputType="textCapSentences"
        android:hint="@string/digite_um_nome"
        android:id="@+id/nameSet"/>
    <TableRow
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="end"
        android:paddingTop="@dimen/nav_header_vertical_spacing">
        <Button
            android:id="@+id/btnBack"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btn_back"
            android:textStyle="bold"
            android:textSize="18sp"
            android:background="@drawable/btn_calc"
            android:textColor="@color/report_balance_indent0_bgs"
            android:layout_marginTop="1dp"
            android:layout_marginLeft="1dp"
            android:layout_marginRight="1dp"
            android:layout_marginBottom="1dp"
            android:padding="@dimen/nav_header_vertical_spacing"/>
        <Button
            android:id="@+id/btnOK"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btn_ok"
            android:textStyle="bold"
            android:textSize="18sp"
            android:background="@drawable/btn_calc"
            android:textColor="@color/green_custom"
            android:layout_marginTop="1dp"
            android:layout_marginLeft="1dp"
            android:layout_marginRight="1dp"
            android:layout_marginBottom="1dp"
            android:padding="@dimen/nav_header_vertical_spacing"/>
    </TableRow>

</LinearLayout>